# Dragons-FastAPI

./: .gitlab-ci.yml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: base_service.py  config.py  database.py  main.py
app/consumer/: consumer.py  service.py
app/core/consumer/: client.py  consumer.py  signal_handler.py
app/daily_reporter/: consumer.py  report_sender.py  schemas.py  service.py
app/migrations/: env.py
app/migrations/versions/: 14c970aeaad6_event.py  41e20938e9b1_model_change.py  8fa5430dab43_initial_migration.py  b8456149c193_event.py
app/models/: events.py
app/stream_consumer/: consumer.py  schemas.py  service.py
app/tests/: conftest.py  factory_schemas.py  test_consumer.py  test_daily_reporter.py
