[tool.poetry]
name = "dragons-fastapi"
version = "0.1.0"
description = ""
authors = ["Rauan Kassymkhanov <rauan.kassymkhanov@nixs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
alembic = "^1.13.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
psycopg = {extras = ["binary"], version = "^3.2.2"}
pytest = "^8.3.3"
aiobotocore = "^2.15.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
polyfactory = "^2.16.2"
aws-lambda-powertools = "^2.43.1"
moto = "^5.0.14"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "T201"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
